[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Color_picker.gd" type="Script" id=1]
[ext_resource path="res://addons/primitives2d/rectangle2d.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Color_picker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -76.0
margin_right = 144.0
margin_bottom = 76.0
custom_styles/panel = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 282.0
margin_bottom = 146.0
columns = 10

[node name="ColorRect" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_right = 24.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0, 0.25098, 1 )

[node name="ColorRect2" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.768627, 0.141176, 0.188235, 1 )

[node name="ColorRect3" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.792157, 0.321569, 0.788235, 1 )

[node name="ColorRect4" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 84.0
margin_right = 108.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.952941, 0.537255, 0.960784, 1 )

[node name="ColorRect5" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0470588, 0.945098, 1, 1 )

[node name="ColorRect6" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 140.0
margin_right = 164.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.411765, 0.666667, 1 )

[node name="ColorRect7" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 168.0
margin_right = 192.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.188235, 0.0117647, 0.85098, 1 )

[node name="ColorRect8" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 196.0
margin_right = 220.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.2, 0.596078, 0.294118, 1 )

[node name="ColorRect9" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 224.0
margin_right = 248.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.6, 0.901961, 0.372549, 1 )

[node name="ColorRect10" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 252.0
margin_right = 276.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0.921569, 0.341176, 1 )

[node name="ColorRect11" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_top = 72.0
margin_right = 24.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.521569, 0.521569, 0.521569, 1 )

[node name="ColorRect12" type="ColorRect" parent="PanelContainer/GridContainer"]
margin_left = 28.0
margin_top = 72.0
margin_right = 52.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rectangle2D" type="Node2D" parent="PanelContainer"]
script = ExtResource( 2 )
width = 24.0
height = 68.0
line_width = 2.0

[connection signal="gui_input" from="." to="." method="_on_Color_picker_gui_input"]
